# telegraph

./: .gitignore  .gitmodules  ABOUT.md  CMakeLists.txt  README.md  build-debug.sh  build-mac.sh  build.sh  test.sh
cmake_modules/: AddGTest.cmake  AddJUCE.cmake  AddVST3SDK.cmake
installer_resources/vst/: INTRODUCTIONS.rtfd  READ ME.rtfd
src/telegraph-core/: parameters.h  voice.h
src/telegraph-juce-shell/: ModMapButtonListener.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetDisplayButtonListener.h  PresetFileManager.h  PresetSaveAsModalLauncher.h  SystemConstants.h  TelegraphFontManager.h  TelegraphLogger.h  TelegraphLookAndFeelProvider.h  TelegraphUIContentComponent.h  UIComponents.h
src/telegraph-juce-shell/fonts/: ARKES.cpp  ARKES.h  Eunomia.cpp  Eunomia.h  FAW.cpp  FAW.h  Glitch.cpp  Glitch.h  HPDisplay.cpp  HPDisplay.h  Hypo_readme_license.txt  NMCondensed.cpp  NMCondensed.h  NMMedium.cpp  NMMedium.h  ORCB.cpp  ORCB.h  USSRStencil.cpp  USSRStencil.h  hypo.cpp  hypo.h
src/telegraph-vst-shell/: telegraphFactory.cpp  telegraphSynthController.cpp  telegraphSynthController.h  telegraphSynthProcessor.cpp  telegraphSynthProcessor.h  telegraphVersion.h
test/telegraph-core/: parameters_test.cpp  voice_test.cpp
